--- a/.github/workflows/autotable-update.yml
+++ b/.github/workflows/autotable-update.yml
@@ -32,4 +32,4 @@ jobs:
         run: uv pip install git+https://github.com/gouzil/autoTable@e599a51a7b230d32227c27e6f6d3ce931a2adebe
 
       - name: Run autotable issue-update
-        run: uv autotable issue-update ${{ inputs.owner_repo }} ${{ inputs.issue_number }} ${{ env.PAT }}
+        run: autotable issue-update ${{ inputs.owner_repo }} ${{ inputs.issue_number }} ${{ env.PAT }}
